--- a/manast_site/templates/top_navigation.html
+++ b/manast_site/templates/top_navigation.html
@@ -16,7 +16,7 @@
                     <span class=" fa fa-angle-down"></span>
                 </a>
                 <ul class="dropdown-menu dropdown-usermenu pull-right">
-                    <li><a href="{% url "profileView" %}">{% trans "Profile" %}</a></li>
+                    <li><a href="{% url "profile_view" %}">{% trans "Profile" %}</a></li>
                     <li>
                         <a href="{% url "edit_user" %}">
                             <span>{% trans "Settings" %}</span>
