--- a/manast_site/templates/fixed_footer.html
+++ b/manast_site/templates/fixed_footer.html
@@ -1,11 +1,12 @@
-{% extends "app/base_site.html" %}
+{% extends "base_site.html" %}
+{% load static %}
 {% load i18n %}
 {% block title %} {% trans "Fixed Footer" %} {% endblock title %}
 
 {% block stylesheets %}
     {{ block.super }}
     <!-- jQuery custom content scroller -->
-    <link href="/static/vendors/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css" rel="stylesheet"/>
+    <link href="{% static "/vendors/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css" %}" rel="stylesheet"/>
 {% endblock stylesheets %}
 
 {% block body_class %}nav-md footer_fixed{% endblock body_class %}
@@ -25,5 +26,5 @@
 {% block javascripts %}
     {{ block.super }}
     <!-- jQuery custom content scroller -->
-    <script src="/static/vendors/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="{% static "/vendors/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js" %}"></script>
 {% endblock javascripts %}
