Commit 8 Minor Templates errors

--- a/manast_site/templates/index.html
+++ b/manast_site/templates/index.html
@@ -5,7 +5,7 @@
 <head>
     <title>{% trans "ManagementAssistant" %} - {% trans "A Shop Management Assistant" %}</title>
     <meta charset="UTF-8">
-    <meta name="description" content="GameHoarder - game collection manager ">
+    <meta name="description" content="ManagementAssistant - shop management assistant ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Favicon -->
     <link src="{% static "img/favicon.ico" %}" rel="shortcut icon"/>
@@ -59,7 +59,7 @@
     <div class="hero-slider owl-carousel">
         <div class="hs-item set-bg" data-setbg="{% static "img/bg.jpg" %}">
             <div class="container">
-                <h2>{% trans "Management Assistant" %}</h2>
+                <h2>{% trans "ManagementAssistant" %}</h2>
                 <p>{% trans "Upgrade your Sales Predictions" %}</p>
                 <div class="clearfix"></div>
                 <a href="#features" class="site-btn sb-c1">{% trans "Read More" %}</a>
@@ -249,7 +249,7 @@
                     <img src="{% static "img/logo.png" %}" alt="">
                     <p>{% trans "Management Assistant was developed as a final year student project" %}.</p>
                     <div class="social-links">
-                        <a href="https://github.com/binary-monkey/"><i class="fa fa-github"></i></a>
+                        <a href="https://github.com/oierajenjo/"><i class="fa fa-github"></i></a>
                     </div>
                 </div>
             </div>
