--- a/manast_site/templates/registration/password_reset_complete.html
+++ b/manast_site/templates/registration/password_reset_complete.html
@@ -11,11 +11,11 @@
 
 {% load i18n %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     {% load static %}
     <meta charset="UTF-8">
-    <title>{% trans "GameHoarder Login" %}</title>
+    <title>{% trans "ManagementAssistant Login" %}</title>
     <link href="{% static 'css/letras.css' %}" rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="{% static 'css/normalize.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -30,7 +30,7 @@
 
     <h1>
         {% trans "Your password has been updated. You can now" %} <a
-            href="/login">login</a>
+            href="{% url "login" %}">login</a>
 
     </h1>
 </div>
