--- a/manast_site/templates/registration/password_reset_email.html
+++ b/manast_site/templates/registration/password_reset_email.html
@@ -8,5 +8,5 @@
     {% trans "If it doesn't work try copying the url to your search bar" %}.
 
     {% trans "Regards" %},
-    {% trans "GameHoarder Support" %}
+    {% trans "ManagementAssistant Support" %}
 {% endautoescape %}
