--- a/manast_site/templates/shop/tables/sales_table.html
+++ b/manast_site/templates/shop/tables/sales_table.html
@@ -21,16 +21,16 @@
           <h3>{{ shop.name }} | {% trans "Sales" %} </h3>
         </div>
 
-{#        <div class="title_right">#}
-{#          <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">#}
-{#            <div class="input-group">#}
-{#              <input type="text" class="form-control" placeholder="Search for...">#}
-{#              <span class="input-group-btn">#}
-{#                <button class="btn btn-default" type="button">Go!</button>#}
-{#              </span>#}
-{#            </div>#}
-{#          </div>#}
-{#        </div>#}
+        <div class="title_right">
+          <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search for...">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="button">Go!</button>
+              </span>
+            </div>
+          </div>
+        </div>
       </div>
 
       <div class="clearfix"></div>
@@ -41,7 +41,7 @@
           <div class="x_panel">
             <div class="x_title">
               <h2>Button Example <small>Users</small></h2>
-              <ul class="nav navbar-right panel_toolbox">
+{% comment %}              <ul class="nav navbar-right panel_toolbox">
                 <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                 </li>
                 <li class="dropdown">
@@ -55,35 +55,33 @@
                 </li>
                 <li><a class="close-link"><i class="fa fa-close"></i></a>
                 </li>
-              </ul>
+              </ul>{% endcomment %}
               <div class="clearfix"></div>
             </div>
             <div class="x_content">
-              <p class="text-muted font-13 m-b-30">
-                The Buttons extension for DataTables provides a common set of options, API methods and styling to display buttons on a page that will interact with a DataTable. The core library provides the based framework upon which plug-ins can built.
-              </p>
               <table id="datatable-buttons" class="table table-striped table-bordered">
                 <thead>
                   <tr>
                     <th>{% trans "Item" %}</th>
-                    <th>{% trans "Position" %}</th>
-                    <th>{% trans "Office" %}</th>
-                    <th>{% trans "Age" %}</th>
-                    <th>{% trans "Start date" %}</th>
-                    <th>{% trans "Salary" %}</th>
+                    <th>{% trans "Category" %}</th>
+                    <th>{% trans "Quantity" %}</th>
+                    <th>{% trans "Price" %}</th>
+                    <th>{% trans "Cost" %}</th>
+                    <th>{% trans "Benefits" %}</th>
+                    <th>{% trans "Date" %}</th>
                   </tr>
                 </thead>
 
                 <tbody>
                   <tr>
                       {% for sale in sales %}
-                          <td>{{ sale.item.name }}</td>
-                          <td>{{ sale.item.category }}</td>
-                          <td>{{ sale.quantity }}</td>
-                          <td>{{ sale.item.price|floatformat:2 }}</td>
-                          <td>{{ sale.cost|floatformat:2 }}</td>
+                          <td>{{ sale.item_sale.name }}</td>
+                          <td>{{ sale.item_sale.category }}</td>
+                          <td>{{ sale.quantity_sale }}</td>
+                          <td>{{ sale.price_sale|floatformat:2 }}</td>
+                          <td>{{ sale.cost_sale|floatformat:2 }}</td>
                           <td>{{ sale.benefits|floatformat:2 }}</td>
-                          <td>{{ sale.date }}</td>
+                          <td>{{ sale.date_sale }}</td>
                       {% endfor %}
                   </tr>
                 </tbody>
