--- a/manast_site/templates/sidebar.html
+++ b/manast_site/templates/sidebar.html
@@ -11,12 +11,12 @@
     <div class="profile clearfix">
         <div class="profile_pic">
             <a href="{% url "profile_view" %}">
-                <img src="/images/{{ profile.avatar }}" alt="{{ profile.user.username }}" class="img-circle profile_img">
+                <img src="/images/{{ profile.avatar }}" alt="{{ profile.user.first_name }} {{ profile.user.last_name }}" class="img-circle profile_img">
             </a>
         </div>
         <div class="profile_info">
             <span>{% trans "Welcome" %},</span>
-            <h2>{{ profile.user.username }}</h2>
+            <h2>{{ profile.user.first_name }} {{ profile.user.last_name }}</h2>
         </div>
     </div>
     <!-- /menu profile quick info -->
@@ -27,10 +27,8 @@
     <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
         <div class="menu_section">
             <h3>{% trans "General" %}</h3>
-            <ul class="nav side-menu">
-{#                <li><a href="{% url "index" %}"><i class="fa fa-home"></i> {% trans "Home" %} <span class="fa"></span></a></li>#}
-{#                <li><a href="{% url "search_users" %}"><i class="fa fa-users"></i> {% trans "Users" %} <span#}
-{#                        class="fa"></span></a></li>#}
+            <ul class="nav side-menu ">
+                <li><a href="{% url "profile_view" %}"><i class="fa fa-home"></i> {% trans "User" %} </a></li>
             </ul>
         </div>
         <div class="menu_section">
