--- a/manast_site/templates/shop/tables/sales_table.html
+++ b/manast_site/templates/shop/tables/sales_table.html
@@ -41,49 +41,37 @@
           <div class="x_panel">
             <div class="x_title">
               <h2>Button Example <small>Users</small></h2>
-{% comment %}              <ul class="nav navbar-right panel_toolbox">
-                <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a href="#">Settings 1</a>
-                    </li>
-                    <li><a href="#">Settings 2</a>
-                    </li>
-                  </ul>
-                </li>
-                <li><a class="close-link"><i class="fa fa-close"></i></a>
-                </li>
-              </ul>{% endcomment %}
+
               <div class="clearfix"></div>
             </div>
             <div class="x_content">
-              <table id="datatable-buttons" class="table table-striped table-bordered">
+{#              <table id="datatable-buttons" class="table table-striped table-bordered">#}
+              <table id="datatable-fixed-header" class="table table-striped table-bordered">
                 <thead>
                   <tr>
-                    <th>{% trans "Item" %}</th>
-                    <th>{% trans "Category" %}</th>
-                    <th>{% trans "Quantity" %}</th>
-                    <th>{% trans "Price" %}</th>
-                    <th>{% trans "Cost" %}</th>
-                    <th>{% trans "Benefits" %}</th>
-                    <th>{% trans "Date" %}</th>
+                        <th>{% trans "Date" %}</th>
+                        <th>{% trans "Item" %}</th>
+                        <th>{% trans "Category" %}</th>
+                        <th>{% trans "Quantity" %}</th>
+                        <th>{% trans "Price" %}</th>
+                        <th>{% trans "Cost" %}</th>
+                        <th>{% trans "Benefits" %}</th>
+
                   </tr>
                 </thead>
 
                 <tbody>
-                  <tr>
-                      {% for sale in sales %}
-                          <td>{{ sale.item_sale.name }}</td>
-                          <td>{{ sale.item_sale.category }}</td>
-                          <td>{{ sale.quantity_sale }}</td>
-                          <td>{{ sale.price_sale|floatformat:2 }}</td>
-                          <td>{{ sale.cost_sale|floatformat:2 }}</td>
-                          <td>{{ sale.benefits|floatformat:2 }}</td>
-                          <td>{{ sale.date_sale }}</td>
-                      {% endfor %}
-                  </tr>
+                    {% for sale in sales %}
+                    <tr>
+                          <td>{{ sale.date }}</td>
+                          <td>{{ sale.item }}</td>
+                          <td>{{ sale.item.category }}</td>
+                          <td>{{ sale.quantity|floatformat:2 }}</td>
+                          <td>{{ sale.price|floatformat:2 }} €</td>
+                          <td>{{ sale.cost|floatformat:2 }} €</td>
+                          <td>{{ sale.benefits|floatformat:2 }} €</td>
+                    </tr>
+                    {% endfor %}
                 </tbody>
               </table>
             </div>
