--- a/manast_site/templates/sidebar.html
+++ b/manast_site/templates/sidebar.html
@@ -2,7 +2,7 @@
 {% load static %}
 <div class="left_col scroll-view">
     <div class="navbar nav_title" style="border: 0;">
-        <p class="site_title"><i class="fa fa-spinner"></i> <span>GameHoarder</span></p>
+        <a href="{% url "profile_view" %}" class="site_title"><i class="fa fa-spinner"></i> <span>{% trans "ManagementAssistant" %}</span></a>
     </div>
 
     <div class="clearfix"></div>
@@ -22,39 +22,45 @@
     <!-- /menu profile quick info -->
 
     <br/>
-
-    <!-- sidebar menu -->
-    <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
-        <div class="menu_section">
-            <h3>{% trans "General" %}</h3>
-            <ul class="nav side-menu ">
-                <li><a href="{% url "profile_view" %}"><i class="fa fa-user"></i> {% trans "User" %} </a></li>
-            </ul>
-        </div>
-        <div class="menu_section">
-            <h3><i class="fa fa-home"></i>{% trans "Shops" %}</h3>
-            <ul class="nav side-menu">
-                {% for shop in profile.shops.all %}
-                    <li><a><h3>{{ shop.name }}<span class="fa fa-chevron-down"></span></h3></a>
-                        <ul class="nav child_menu">
-                            <li><a href="{% url "shop_view" pk=shop.pk%}">{% trans "Shop Info" %}</a></li>
-                            <li><a href="{% url "sales_table" pk=shop.pk%}">{% trans "Sales" %}</a></li>
-                            <li><a href="{% url "expenses_table" pk=shop.pk%}">{% trans "Expenses" %}</a></li>
-                            <li><a href="{% url "stats_table" pk=shop.pk%}">{% trans "Stats" %}</a></li>
-                            <li><a href="{% url "predictions_table" pk=shop.pk%}">{% trans "Predictions" %}</a></li>
-                        </ul>
-                    </li>
-                {%  endfor %}
-            </ul>
-        </div>
+<!-- sidebar menu -->
+  <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
+    <div class="menu_section">
+        <ul class="nav side-menu ">
+            <li><a href="{% url "profile_view" %}"><i class="fa fa-user"></i> {% trans "User" %} </a></li>
+        </ul>
+        <h3>{% trans "General" %}</h3>
+        <ul class="nav side-menu">
+            {% for shop in profile.shops.all %}
+                <li><a><i class="fa fa-home"></i>{{ shop.name }}<span class="fa fa-chevron-down"></span></a>
+                    <ul class="nav child_menu">
+                        <li><a href="{% url "shop" pk=shop.pk%}">{% trans "Shop Info" %}</a></li>
+                        <li><a href="{% url "sales" pk=shop.pk%}">{% trans "Sales" %}</a></li>
+                        <li><a href="{% url "expenses" pk=shop.pk%}">{% trans "Expenses" %}</a></li>
+                        <li><a href="{% url "stats" pk=shop.pk%}">{% trans "Stats" %}</a></li>
+                        <li><a href="{% url "predictions" pk=shop.pk%}">{% trans "Predictions" %}</a></li>
+                        <li><a href="{% url "data_upload" pk=shop.pk%}">{% trans "Upload Sales" %}</a></li>
+                    </ul>
+                </li>
+            {%  endfor %}
+        </ul>
     </div>
-    <!-- /sidebar menu -->
+  </div>
+  <!-- /sidebar menu -->
 
-    <!-- /menu footer buttons -->
-    <div class="sidebar-footer hidden-small">
-        <a data-toggle="tooltip" data-placement="top" title="Logout" href="{% url "logout" %}">
-            <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
-        </a>
-    </div>
-    <!-- /menu footer buttons -->
+  <!-- /menu footer buttons -->
+  <div class="sidebar-footer hidden-small">
+    <a data-toggle="tooltip" data-placement="top" title="Settings">
+      <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
+    </a>
+    <a data-toggle="tooltip" data-placement="top" title="FullScreen">
+      <span class="glyphicon glyphicon-fullscreen" aria-hidden="true"></span>
+    </a>
+    <a data-toggle="tooltip" data-placement="top" title="Lock">
+      <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
+    </a>
+    <a data-toggle="tooltip" data-placement="top" title="Logout" href="registration/login_register.html">
+      <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
+    </a>
+  </div>
+  <!-- /menu footer buttons -->
 </div>
