Commit 25 Error Handler

--- a/manast_site/templates/shop/tables/sales_table.html
+++ b/manast_site/templates/shop/tables/sales_table.html
@@ -46,7 +46,7 @@
             </div>
             <div class="x_content">
 {#              <table id="datatable-buttons" class="table table-striped table-bordered">#}
-              <table id="datatable-fixed-header" class="table table-striped table-bordered">
+              <table id="datatable-responsive" class="table table-striped table-bordered">
                 <thead>
                   <tr>
                         <th>{% trans "Date" %}</th>
