--- a/manast_site/templates/shop/tables/expenses_table.html
+++ b/manast_site/templates/shop/tables/expenses_table.html
@@ -1,10 +1,102 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "base_site.html" %}
+{% load i18n %}
+{% load static %}
 
-</body>
-</html>
+{% block title %} Sales" %} {% endblock title %}
+
+{% block stylesheets %}
+  {{ block.super }}
+  <link href="{% static "/vendors/datatables.net-bs/css/dataTables.bootstrap.min.css" %}" rel="stylesheet">
+  <link href="{% static "/vendors/datatables.net-buttons-bs/css/buttons.bootstrap.min.css" %}" rel="stylesheet">
+  <link href="{% static "/vendors/datatables.net-fixedheader-bs/css/fixedHeader.bootstrap.min.css" %}" rel="stylesheet">
+  <link href="{% static "/vendors/datatables.net-responsive-bs/css/responsive.bootstrap.min.css" %}" rel="stylesheet">
+  <link href="{% static "/vendors/datatables.net-scroller-bs/css/scroller.bootstrap.min.css" %}" rel="stylesheet">
+{% endblock stylesheets %}
+
+{% block content %}
+  <div class="right_col" role="main">
+    <div class="">
+      <div class="page-title">
+        <div class="title_left">
+          <h3>{{ shop.name }} | {% trans "Sales" %} </h3>
+        </div>
+
+        <div class="title_right">
+          <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search for...">
+              <span class="input-group-btn">
+                <button class="btn btn-default" type="button">Go!</button>
+              </span>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="clearfix"></div>
+
+      <div class="row">
+
+        <div class="col-md-12 col-sm-12 col-xs-12">
+          <div class="x_panel">
+            <div class="x_title">
+              <h2>Button Example <small>Users</small></h2>
+
+              <div class="clearfix"></div>
+            </div>
+            <div class="x_content">
+{#              <table id="datatable-buttons" class="table table-striped table-bordered">#}
+              <table id="datatable-responsive" class="table table-striped table-bordered">
+                <thead>
+                  <tr>
+                    <th>{% trans "Date" %}</th>
+                    <th>{% trans "Item" %}</th>
+                    <th>{% trans "Category" %}</th>
+                    <th>{% trans "Quantity" %}</th>
+                    <th>{% trans "Cost" %}</th>
+                    <th>{% trans "Periodicity" %}</th>
+                    <th>{% trans "Repeat" %}</th>
+                  </tr>
+                </thead>
+
+                <tbody>
+                    {% for exp in expenses %}
+                    <tr>
+                          <td>{{ exp.date }}</td>
+                          <td>{{ exp.item }}</td>
+                          <td>{{ exp.item.category }}</td>
+                          <td>{{ exp.quantity|floatformat:2 }}</td>
+                          <td>{{ exp.cost|floatformat:2 }} €</td>
+                          <td>{{ exp.periodicity }}</td>
+                          <td>{{ exp.repeat }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+{% endblock content %}
+
+{% block javascripts %}
+  {{ block.super }}
+  <!-- Datatables -->
+  <script src="{% static "/vendors/datatables.net/js/jquery.dataTables.min.js" %}"></script>
+  <script src="{% static "/vendors/datatables.net-bs/js/dataTables.bootstrap.min.js" %}"></script>
+  <script src="{% static "/vendors/datatables.net-buttons/js/dataTables.buttons.min.js" %}"></script>
+  <script src="{% static "/vendors/datatables.net-buttons-bs/js/buttons.bootstrap.min.js" %}"></script>
+  <script src="{% static "/vendors/datatables.net-buttons/js/buttons.flash.min.js" %}"></script>
+  <script src="{% static "/vendors/datatables.net-buttons/js/buttons.html5.min.js" %}"></script>
+  <script src="{% static "/vendors/datatables.net-buttons/js/buttons.print.min.js" %}"></script>
+  <script src="{% static "/vendors/datatables.net-fixedheader/js/dataTables.fixedHeader.min.js" %}"></script>
+  <script src="{% static "/vendors/datatables.net-keytable/js/dataTables.keyTable.min.js" %}"></script>
+  <script src="{% static "/vendors/datatables.net-responsive/js/dataTables.responsive.min.js" %}"></script>
+  <script src="{% static "/vendors/datatables.net-responsive-bs/js/responsive.bootstrap.js" %}"></script>
+  <script src="{% static "/vendors/datatables.net-scroller/js/dataTables.scroller.min.js" %}"></script>
+  <script src="{% static "/vendors/jszip/dist/jszip.min.js" %}"></script>
+  <script src="{% static "/vendors/pdfmake/build/pdfmake.min.js" %}"></script>
+  <script src="{% static "/vendors/pdfmake/build/vfs_fonts.js" %}"></script>
+{% endblock javascripts %}
