--- a/manast_site/templates/shop/shop_view.html
+++ b/manast_site/templates/shop/shop_view.html
@@ -29,9 +29,26 @@
                             <h3>{{ shop.name }}</h3>
                             <h2>{{ shop.direction }}</h2>
                             <h2>{{ shop.zip_code }}</h2>
-{#                            <a class="btn btn-primary nav-link" href="{% url 'edit_shop' pk=shop.pk %}">#}
-{#                                {% trans "Edit Shop Info" %}#}
-{#                            </a>#}
+                            <a class="btn btn-primary nav-link" href="{% url 'edit_shop' pk=shop.pk %}">
+                                {% trans "Edit Shop Info" %}
+                            </a>
+                            <a class="btn btn-danger" data-toggle="modal" data-target=".bd-example-modal-sm" id="btn-confirm">Delete Shop <i class="fa fa-trash"></i></a>
+                            <!-- Modal -->
+                            <div class="modal fade" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true" id="mi-modal">
+                                <div class="modal-dialog modal-sm">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                            <h4 class="modal-title" id="myModalLabel">Delete {{ shop.name }}</h4>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="btn btn-default" id="modal-btn-si">{% trans "Yes" %}</button>
+                                            <button type="button" class="btn btn-primary" id="modal-btn-no">{% trans "No" %}</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- End Modal -->
                             <br/>
                         </div>
                         <div class="col-md-9 col-sm-9 col-xs-12">
@@ -48,4 +65,46 @@
 
 {% block javascripts %}
     {{ block.super }}
+    <script>
+        var modalConfirm = function(callback){
+
+            $("#btn-confirm").on("click", function(){
+                $("#mi-modal").modal('show');
+            });
+
+            $("#modal-btn-si").on("click", function(){
+                callback(true);
+                $("#mi-modal").modal('hide');
+            });
+
+            $("#modal-btn-no").on("click", function(){
+                callback(false);
+                $("#mi-modal").modal('hide');
+            });
+        };
+
+        modalConfirm(function(confirm){
+            if(confirm){
+                //Acciones si el usuario confirma
+                $.ajax({
+                    // points to the url where your data will be posted
+                    url:'delete_shop',
+
+                    // data that you will like to return
+                    data:{pk: {{shop.pk}}},
+                    // what to do when the call is success
+                    success:function(response){
+                        location.href = '/profile/'
+                    },
+                    // what to do when the call is complete (you can right your clean from code here)
+                    complete:function(){},
+                    // what to do when there is an error
+                    error:function (xhr, textStatus, thrownError){
+                        location.href = '/profile/'
+                    }
+                });
+            }
+        });
+    </script>
+
 {% endblock javascripts %}
